# neoprint

./: .gitignore  AGENTS.md  README.md  pyproject.bak.toml  pyproject.toml
docs/: ai_chat_history.zh.md  index_counter_design.zh.md  markup_usage.zh.md  syntax_design_reference_(conceptual_code).mo  verbosity_levels_and_colors.zh.md
docs/mdbook.zh/: book.toml  theme.css
docs/mdbook.zh/src/: changelog.md  markup_list.md  parent_layer.md  progress.md  summary.md
examples/: alias.py  all_markup_usage.py  format_exception.py  hello_world.py  parent_layer.py  progress.py  varnames_demo.py
neoprint/: __init__.py  capture.py  config.py  console.py  control.py  counter.py  debugger.py  format.py  formatter.py  frame_info.py  logger.py  markup.py  message_formatter.py  path_glob.py  progress.py  render.py  scope.py  show.py  sourcemap.py  text_object.py  util.py
neoprint/scope/: __init__.py  counter.py  scope.py  timer.py
neoprint/text_object/: __init__.py  base.py  bbcode_text.py  divider_line.py  exception.py  expanded_object.py  index.py  invisible.py  named_variable.py  rich.py  separator.py  source.py  text.py
test/: bbcode_to_ansi.py  check_format_exception.py  check_traceback.py  debug_caller_levels.py  debug_format_exception.py  debug_format_exception_final.py  debug_show.py  descriptive_exceptions.py  example_progress.py  format_exception.py  format_exception_temp.py  format_exception_test.py  format_print_output.py  get_accurate_output.py  long_format_expand_levels.py  long_loose_expand_format.py  rich_print.py  run_and_compare.py  scoped_index_counter_with_np_show.py  shorthand_markdown.py  show_varnames.py  temp_test_line_numbers.py  test_aliases.py  test_all_index_counter_forms.py  test_debugger_config.py  test_exception_marker.py  test_p_behavior.py  test_p_overflow.py  test_progress.py  test_rich_traceback.py  test_show.py  test_show_with_varnames.py  traceback_exception.py  verbosity_levels.py
test/golden_test/: change_parent_pointer.py  color_code_scheme.py  debug_show.py  debug_show_with_varnames.py  divider_line.py  invalid_markups.py  long_format_expand_levels.py  long_loose_expand_format.py  progress.py  scoped_index_counter.py  separator_format.py  show_with_varnames.py  verbosity_levels.py
testsuit/: __init__.py  validate_bbcode_output.py
