[project]
name = "neoprint"
version = "0.1.0a8"
description = "The artish print for modern consoles."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "objprint>=0.3.0",
    "rich>=14.0.0",
    # "rich>=15.0.0",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neoprint"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "likianta"
url = "http://localhost:2191/"
explicit = true
