[project]
name = "neoprint"
version = "0.1.0a9"
description = "The artistic print for modern consoles."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["neoprint"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "likianta"
url = "http://localhost:2191/"
explicit = true
