[project]
name = "neoprint"
version = "0.1.3"
description = "The artistic print for modern consoles."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=14.0.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.29.0"]

[dependency-groups]
dev = [
    "argsense>=1.2.0a6",
    "faker>=40.8.0; python_version >= '3.12'",
    "ipython>=9.14.0; python_version >= '3.12'",
    "lk-utils>=3.6.0b18",
    # "loguru>=0.7.3",
    "objprint>=0.3.0",
    "rich>=15.0.0",
    # "svg-ultralight>=0.34.0; python_version >= '3.12'",
]

# [project.optional-dependencies]
# ext = [
#     # "html2image>=2.0.4",
#     # "pycairo>=1.27.0",
#     # "selenium>=4.27.1",
#     "svg-ultralight>=0.34.0",
# ]

# [project.scripts]
# ...

[project.urls]
homepage = "https://github.com/likianta/neoprint"

[tool.hatch.build.targets.wheel]
packages = ["neoprint"]

[tool.ruff]
ignore = ["E701"]
line-length = 80

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
force-single-line = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# [tool.ty.rules]
# invalid-type-form = "ignore"
# unresolved-attribute = "ignore"

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "likianta"
url = "http://localhost:2191/"
# explicit = true

[tool.uv.sources]
argsense = { index = "likianta" }
lk-utils = { index = "likianta" }
